--- a/package.json
+++ b/package.json
@@ -15,10 +15,17 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
+    "faunadb": "^4.8.0",
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
     "react": "^18",
+    "react-charts": "^3.0.0-beta.57",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "recharts": "^2.12.3",
+    "sonner": "^1.4.41",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -26,6 +33,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
